# near-contract

./: Cargo.toml  README.md  build.sh
src/: lib.rs
